--- a/개발 - 요구분석과 설계 메모.md
+++ b/개발 - 요구분석과 설계 메모.md
@@ -1,24 +1,24 @@
-# ¿ä±¸ºÐ¼®°ú ¼³°è ¸Þ¸ð
+ï»¿# ìš”êµ¬ë¶„ì„ê³¼ ì„¤ê³„ ë©”ëª¨
 * 2018-01-20. magicpotato.
 
 
-## ¹®Á¦ÇØ°á Á¢±Ù¹ý, ¼³°è Á¢±Ù¹ý
+## ë¬¸ì œí•´ê²° ì ‘ê·¼ë²•, ì„¤ê³„ ì ‘ê·¼ë²•
 
-µÎ °¡Áö¸¦ ÇÊ¿ä¿¡ µû¶ó ¹ø°¥¾Æ°¡¸ç ¼¯¾î¾´´Ù.
+ë‘ ê°€ì§€ë¥¼ í•„ìš”ì— ë”°ë¼ ë²ˆê°ˆì•„ê°€ë©° ì„žì–´ì“´ë‹¤.
 
-1. Top-Down Á¢±Ù¹ý: Ãß»óÀû ¹®Á¦¸¦ ±¸Ã¼È­ ÇØ ³ª°¡´Â Á¢±Ù¹ý
-2. Bottom-Up Á¢±Ù¹ý: ¹Ø¹Ù´ÚÀÇ ±¸Ã¼ÀûÀÎ ±â´Éµé·Î ½ÃÀÛÇØ¼­, ÀüÃ¼¸¦ ¿Ï¼ºÇØ ³ª°¡´Â Á¢±Ù¹ý
+1. Top-Down ì ‘ê·¼ë²•: ì¶”ìƒì  ë¬¸ì œë¥¼ êµ¬ì²´í™” í•´ ë‚˜ê°€ëŠ” ì ‘ê·¼ë²•
+2. Bottom-Up ì ‘ê·¼ë²•: ë°‘ë°”ë‹¥ì˜ êµ¬ì²´ì ì¸ ê¸°ëŠ¥ë“¤ë¡œ ì‹œìž‘í•´ì„œ, ì „ì²´ë¥¼ ì™„ì„±í•´ ë‚˜ê°€ëŠ” ì ‘ê·¼ë²•
 
 
-## MVC ±¸Á¶
+## MVC êµ¬ì¡°
 
-ÇÁ·ÎÁ§Æ® Æ¯¼º¿¡ ¸Â°Ô º¯ÇüÇÒ ¼ö ÀÖ´Ù.
+í”„ë¡œì íŠ¸ íŠ¹ì„±ì— ë§žê²Œ ë³€í˜•í•  ìˆ˜ ìžˆë‹¤.
 
-| ¿µ¿ª | ¿ªÇÒ |
+| ì˜ì—­ | ì—­í•  |
 | --- | --- |
-| Model | ÀÚ·á±¸Á¶, ·ÎÁ÷ ±¸Çö |
-| View | ÀÚ·á °¡°ø/Ç¥½Ã, »ç¿ëÀÚ ÀÔ·Â¿¡ ´ëÇÑ View°üÁ¡ ¿¡¼­ÀÇ °ËÁõ ¹× ÀÌº¥Æ® Àü´Þ |
-| Controller | Model Á¦¾î, View Á¦¾î, Model ¹× ViewÀÌº¥Æ® ÇÚµé¸µ |
+| Model | ìžë£Œêµ¬ì¡°, ë¡œì§ êµ¬í˜„ |
+| View | ìžë£Œ ê°€ê³µ/í‘œì‹œ, ì‚¬ìš©ìž ìž…ë ¥ì— ëŒ€í•œ Viewê´€ì  ì—ì„œì˜ ê²€ì¦ ë° ì´ë²¤íŠ¸ ì „ë‹¬ |
+| Controller | Model ì œì–´, View ì œì–´, Model ë° Viewì´ë²¤íŠ¸ í•¸ë“¤ë§ |
 
 
 EOF
