--- a/백업 - 윈도우98시절 네가지 타입의 DC.md
+++ b/백업 - 윈도우98시절 네가지 타입의 DC.md
@@ -1,88 +1,88 @@
-# À©µµ¿ì DC ÀÇ 4°¡Áö Á¾·ù (VCL°ü·Ã)
-## magicpotato.
+ï»¿# ìœˆë„ìš° DC ì˜ 4ê°€ì§€ ì¢…ë¥˜ (VCLê´€ë ¨)
+* magicpotato.
 
-¿À´ÃÀº DC¿¡ ´ëÇØ¼­ ½áº¼·Á°í ÇÕ´Ï´Ù -_-;
+ì˜¤ëŠ˜ì€ DCì— ëŒ€í•´ì„œ ì¨ë³¼ë ¤ê³  í•©ë‹ˆë‹¤ -_-;
 
-±×³É °³ÀÎÀûÀÎ »ý°¢ÀÌ¸ç Á¤È®ÇÏÁö ¾ÊÀ¸¹Ç·Î..
-Æ²¸° ³»¿ëÀÌ ÀÖÀ»¶© ÁöÀûÀ» ºÎÅ¹ µå¸³´Ï´Ù.
-
-
-À©µµ¿ìÁî °ÔÀÓ ÇÁ·Î±×·¡¹ÖÀÌ¶ó´Â.. (Black Art of)Ã¥¿¡¼­´Â
-DCÀÇ Á¾·ù°¡ 4°¡Áö°¡ ÀÖ´Ù°í ÇÕ´Ï´Ù.
+ê·¸ëƒ¥ ê°œì¸ì ì¸ ìƒê°ì´ë©° ì •í™•í•˜ì§€ ì•Šìœ¼ë¯€ë¡œ..
+í‹€ë¦° ë‚´ìš©ì´ ìžˆì„ë• ì§€ì ì„ ë¶€íƒ ë“œë¦½ë‹ˆë‹¤.
 
 
-
-Ã¹¹øÂ°´Â.. ¿ì¸®°¡ ÀÏ¹ÝÀûÀ¸·Î »ç¿ëÇÏ´Â DCÇÔ¼ö..
-GetDC/ReleaseDC(¾ðÁ¦³ª), BeginPaint/EndPaint(WM_PAINT)·Î ¾ò¾î¼­ »ç¿ëÇÏ´Â
-DC¶ó°í ÇÕ´Ï´Ù. ÀÌ°ÍÀº.. À©µµ¿ì¿¡¼­ °øÅëÀ¸·Î »ç¿ëÇÏ´Â DC¿¡¼­
-ÀÛÀº Ä³½¬¸¦ ¾ò¾î¼­ »ç¿ëÀ» ÇÑ´Ù°í ÇÕ´Ï´Ù.
-
-(Á¦»ý°¢) DC¸¦ ¾òÀ¸¸é ±âº»ÀûÀ¸·Î µðÆúÆ® °ªÀÌ ÀÖ´Âµ¥..
-¹è°æ»ö, ÆùÆ®, ºê·¯½¬, ¸ÅÇÎ ÀÌ·± Á¤º¸ ÀÔ´Ï´Ù.
-
-DC¸¦ ¾²¸é ¿ø»óº¹±¸ ½ÃÅ°°í µÇµ¹¸®Áö ¾ÊÀ¸¸é..
-´Ù¸¥ ÇÁ·Î±×·¥¿¡¼­ ÇØÁ¦ÇÏÁö ¾ÊÀº ºê·¯½¬¿Í ÆùÆ®¸¦ »ç¿ëÇØ¼­..
-±×¸®´Â °æ¿ì¸¦ °¡²û Ã£¾Æº¼¼ö ÀÖÀ»°Í °°½À´Ï´Ù.
-(±âº» DC¸¸ ¾ò¾î¼­ ¼ÂÆÃ ¾ÈÇÏ°í ¹Ù·Î ±×¸®´Â ÇÁ·Î±×·¥¿¡¼­ ¸»ÀÌÁÒ)
-
-Áï.. ÀåÄ¡¼³Á¤Àº ÇÑ°¡ÁöÀÌ°í.. ±×¸®´Â ¿µ¿ªÀº º°°³·Î »ý¼ºÇÏ´Â°Í °°½À´Ï´Ù.
+ìœˆë„ìš°ì¦ˆ ê²Œìž„ í”„ë¡œê·¸ëž˜ë°ì´ë¼ëŠ”.. (Black Art of)ì±…ì—ì„œëŠ”
+DCì˜ ì¢…ë¥˜ê°€ 4ê°€ì§€ê°€ ìžˆë‹¤ê³  í•©ë‹ˆë‹¤.
 
 
 
-µÎ¹øÂ°´Â.. Å¬·¡½º DC¶ó´Â°Çµ¥
-Å¬·¡½º¸¦ À©µµ¿ì¿¡ ¼±¾ðÇÒ¶§ CS_CLASSDC ½ºÅ¸ÀÏ ÇÃ·¡±×¸¦ Ãß°¡ÇÏ¸é
-ÀÌ°ÍÀ» »ç¿ëÇÒ¼ö ÀÖ´Ù°í ÇÕ´Ï´Ù.
+ì²«ë²ˆì§¸ëŠ”.. ìš°ë¦¬ê°€ ì¼ë°˜ì ìœ¼ë¡œ ì‚¬ìš©í•˜ëŠ” DCí•¨ìˆ˜..
+GetDC/ReleaseDC(ì–¸ì œë‚˜), BeginPaint/EndPaint(WM_PAINT)ë¡œ ì–»ì–´ì„œ ì‚¬ìš©í•˜ëŠ”
+DCë¼ê³  í•©ë‹ˆë‹¤. ì´ê²ƒì€.. ìœˆë„ìš°ì—ì„œ ê³µí†µìœ¼ë¡œ ì‚¬ìš©í•˜ëŠ” DCì—ì„œ
+ìž‘ì€ ìºì‰¬ë¥¼ ì–»ì–´ì„œ ì‚¬ìš©ì„ í•œë‹¤ê³  í•©ë‹ˆë‹¤.
 
-DC¸¦ ÇÑ¹ø¸¸ ¾ò¾î³õÀ¸¸é
-Á¾·á½Ã±îÁö Get/Begin/Release/End¸¦ ÇÒ ÇÊ¿ä°¡ ¾ø´Ù°í ÇÕ´Ï´Ù.
+(ì œìƒê°) DCë¥¼ ì–»ìœ¼ë©´ ê¸°ë³¸ì ìœ¼ë¡œ ë””í´íŠ¸ ê°’ì´ ìžˆëŠ”ë°..
+ë°°ê²½ìƒ‰, í°íŠ¸, ë¸ŒëŸ¬ì‰¬, ë§¤í•‘ ì´ëŸ° ì •ë³´ ìž…ë‹ˆë‹¤.
 
-ÀÌ°ÍÀ» »ç¿ëÇÏ¸é. 1¹øÂ°¿¡ ¼³¸íÇÑ 'À©µµ¿ì °øÅë DC'°¡ ¾Æ´Ñ..
-'Å¬·¡½º °øÅë DC Ä³½¬'¸¦ »ç¿ëÇÏ°Ô µÇ´Â°Í °°½À´Ï´Ù. (ÀÌÇØ°¡ ¿ì¾î -_-;;)
+DCë¥¼ ì“°ë©´ ì›ìƒë³µêµ¬ ì‹œí‚¤ê³  ë˜ëŒë¦¬ì§€ ì•Šìœ¼ë©´..
+ë‹¤ë¥¸ í”„ë¡œê·¸ëž¨ì—ì„œ í•´ì œí•˜ì§€ ì•Šì€ ë¸ŒëŸ¬ì‰¬ì™€ í°íŠ¸ë¥¼ ì‚¬ìš©í•´ì„œ..
+ê·¸ë¦¬ëŠ” ê²½ìš°ë¥¼ ê°€ë” ì°¾ì•„ë³¼ìˆ˜ ìžˆì„ê²ƒ ê°™ìŠµë‹ˆë‹¤.
+(ê¸°ë³¸ DCë§Œ ì–»ì–´ì„œ ì…‹íŒ… ì•ˆí•˜ê³  ë°”ë¡œ ê·¸ë¦¬ëŠ” í”„ë¡œê·¸ëž¨ì—ì„œ ë§ì´ì£ )
 
-°øÅëDCÃ³·³.. ¼ÂÆÃÀº ÇÑ°¡ÁöÀÌ°í.. ÀÌ·±°É (´ë»§DC -_- ¶ó¸é ¾î¿ï¸±±î¿ä)
-Å¬·¡½º Àü¿ëÀ¸·Î ÇÏ³ª¸¦ ´õ ¸¸µç°Ì´Ï´Ù. ±× Å¬·¡½º¿¡¼­ ³ª¿Â À©µµ¿ì¿¡ »ç¿ë..
-
-(Á¦»ý°¢) ¿¡·Î.. Å¬·¡½ºDC¸¦ ¼³Á¤ÇÑ Å¬·¡½º À©µµ¿ì10°³¸¦ »ý¼ºÇÑµÚ¿¡..
-1¹ø¿¡¼­ ºê·¯½¬/ÆùÆ®¸¦ ¼ÂÆÃÇÏ°í »ç¿ëÇÑµÚ¿¡..
-2~10¹ø¿¡¼­ ¼ÂÆÃÇÏÁö ¾Ê°í »ç¿ëÇÒ¶§ 1¹ø°ú µ¿ÀÏÇÑ È¿°ú¸¦ ¾òÀ»¼ö ÀÖ´Â..°Í..
-°°½À´Ï´Ù. (»ý°¢ÀÏ »ÓÀÔ´Ï´Ù Ã¥ÀÇ ¼³¸íÀÌ ¿Ïº®ÇÏÁö ¾Ê¾Æ¿ä -_-;)
+ì¦‰.. ìž¥ì¹˜ì„¤ì •ì€ í•œê°€ì§€ì´ê³ .. ê·¸ë¦¬ëŠ” ì˜ì—­ì€ ë³„ê°œë¡œ ìƒì„±í•˜ëŠ”ê²ƒ ê°™ìŠµë‹ˆë‹¤.
 
 
 
-±×¸®°í ÇÁ¶óÀÌºø DC¶ó´Â°Ô ÀÖ´Âµ¥..
-Å¬·¡½ºDC¿Í ºñ½ÁÇÏ³ª, ¿ª½Ã CS_OWNDC½ºÅ¸ÀÏ ÇÃ·¡±×¸¦ Ãß°¡ÇÏ¸é »ç¿ëÇÑ´ä´Ï´Ù.
+ë‘ë²ˆì§¸ëŠ”.. í´ëž˜ìŠ¤ DCë¼ëŠ”ê±´ë°
+í´ëž˜ìŠ¤ë¥¼ ìœˆë„ìš°ì— ì„ ì–¸í• ë•Œ CS_CLASSDC ìŠ¤íƒ€ì¼ í”Œëž˜ê·¸ë¥¼ ì¶”ê°€í•˜ë©´
+ì´ê²ƒì„ ì‚¬ìš©í• ìˆ˜ ìžˆë‹¤ê³  í•©ë‹ˆë‹¤.
 
-Â÷ÀÌÁ¡ÀÌ¶ó¸é.. 10°³¸¦ ¸¸µé¸é 10°³¿¡ ¸ðµÎ Àü¿ë/¿µ±¸ DC°¡ »ý±ä´Ù´Â°Ì´Ï´Ù.
-Áï.. À©µµ¿ì¸¦ 1°³¸¸ ¸¸µé²¨¸é Å¬·¡½ºµç ÇÁ¶óÀÌºøÀÌµç »ó°üÀÌ ¾ø´Ù´Â ¶æ ÀÔ´Ï´Ù.
+DCë¥¼ í•œë²ˆë§Œ ì–»ì–´ë†“ìœ¼ë©´
+ì¢…ë£Œì‹œê¹Œì§€ Get/Begin/Release/Endë¥¼ í•  í•„ìš”ê°€ ì—†ë‹¤ê³  í•©ë‹ˆë‹¤.
 
-(Á¦»ý°¢) 10°³ÀÏ¶§.. ´ë»§DC°¡ 10°³ »ý±ä´Ù´Â ¶æ ÀÔ´Ï´Ù -_-;
-±âº»°ªÀÌ°í ¹¹°í ¾øÀÌ Àü¿ëDCÀÎ°Í °°½À´Ï´Ù.
+ì´ê²ƒì„ ì‚¬ìš©í•˜ë©´. 1ë²ˆì§¸ì— ì„¤ëª…í•œ 'ìœˆë„ìš° ê³µí†µ DC'ê°€ ì•„ë‹Œ..
+'í´ëž˜ìŠ¤ ê³µí†µ DC ìºì‰¬'ë¥¼ ì‚¬ìš©í•˜ê²Œ ë˜ëŠ”ê²ƒ ê°™ìŠµë‹ˆë‹¤. (ì´í•´ê°€ ìš°ì–´ -_-;;)
 
-¿Ö¾²´ÂÁö´Â ¾È³ª¿ÍÀÖ°í -_- ¼Óµµ¶§¹®¿¡ ±×·±°ÍÀÏ±î ÃßÃøÇØ º¾´Ï´Ù....
+ê³µí†µDCì²˜ëŸ¼.. ì…‹íŒ…ì€ í•œê°€ì§€ì´ê³ .. ì´ëŸ°ê±¸ (ëŒ€ë¹µDC -_- ë¼ë©´ ì–´ìš¸ë¦´ê¹Œìš”)
+í´ëž˜ìŠ¤ ì „ìš©ìœ¼ë¡œ í•˜ë‚˜ë¥¼ ë” ë§Œë“ ê²ë‹ˆë‹¤. ê·¸ í´ëž˜ìŠ¤ì—ì„œ ë‚˜ì˜¨ ìœˆë„ìš°ì— ì‚¬ìš©..
 
-
-³×¹øÂ°´Â À©µµ¿ì DCÀÎµ¥.. Ã¹¹øÂ° DC¿Í µ¿ÀÏÇÏ´Ù°í »ý°¢ÇÏ½Ã¸é ½±½À´Ï´Ù.
-
-
-CreateParams() ¿¡¼­ ÇÃ·¡±× È®ÀÎÀ» ÇØº¸´Ï..
-ºô´õÀÇ Canvas..Áï.. DC´Â.. 2¹øÂ° 'Å¬·¡½º DC'¸¦ »ç¿ëÇÏ´Â°Í °°½À´Ï´Ù.
-
-'¼ÂÆÃ'ÀÇ °³³äÀº Àû¿ëµÇÁö ¾Ê´Âµ¥.. (WM_PAINT¿¡¼­ ºô´õ°¡ ³»ºÎÀûÀ¸·Î ´Ù½Ã..)
-'¸±¸®Áî ÇÏÁö ¾Ê°íµµ ¾ðÁ¦µçÁö »ç¿ëÀÌ °¡´ÉÇÏ´Ù'´Â°ÍÀÌ ²ø¸³´Ï´Ù.
-
-¾ðÁ¦ ¾îµð¼­³ª TextOut(Canvas->Handle, ...)¸¦ ÇÏ¸é È¿°ú°¡ ³ªÅ¸³³´Ï´Ù.
-ÀÌ°ÍÀº Å¬·¡½ºDC¸¦ ´Ù´Â°Ì´Ï´Ù.
+(ì œìƒê°) ì—ë¡œ.. í´ëž˜ìŠ¤DCë¥¼ ì„¤ì •í•œ í´ëž˜ìŠ¤ ìœˆë„ìš°10ê°œë¥¼ ìƒì„±í•œë’¤ì—..
+1ë²ˆì—ì„œ ë¸ŒëŸ¬ì‰¬/í°íŠ¸ë¥¼ ì…‹íŒ…í•˜ê³  ì‚¬ìš©í•œë’¤ì—..
+2~10ë²ˆì—ì„œ ì…‹íŒ…í•˜ì§€ ì•Šê³  ì‚¬ìš©í• ë•Œ 1ë²ˆê³¼ ë™ì¼í•œ íš¨ê³¼ë¥¼ ì–»ì„ìˆ˜ ìžˆëŠ”..ê²ƒ..
+ê°™ìŠµë‹ˆë‹¤. (ìƒê°ì¼ ë¿ìž…ë‹ˆë‹¤ ì±…ì˜ ì„¤ëª…ì´ ì™„ë²½í•˜ì§€ ì•Šì•„ìš” -_-;)
 
 
-WM_PAINT¿¡¼­ Canvas¸¦ °Çµå¸± ÀÏÀÌ ÀÖ´Ù¸é
-BeginPaint, GetDC¸¦ »ç¿ëÇÏÁö ¸»°í.. ¹Ù·Î Canvas->Handle¸¦ »ç¿ë ÇÏ½Ê½Ã¿À.
 
-WM_PAINT³»ºÎ¿¡¼­ Canvas->TextOut()°ú °°Àº..
-Å¬·¡½º ÇÏºÎÀÇ ¸Þ¼Òµå¸¦ »ç¿ëÇÏ¸é.. ³»ºÎÀûÀ¸·Î DC¸¦ °Çµå·Á¼­..
-´Ù½Ã WM_PAINT¸¦ ¹ß»ý½ÃÄÑ¼­ ¹«ÇÑ·çÇÁ°¡ µ¹Áöµµ ¸ð¸¨´Ï´Ù.
-(Àü ÇÑ¹ø °Þ¾îºÃ´Âµ¥ Á¤È®ÇÑ »óÈ²±â¾ïÀÌ ¾ÈµÇ³×¿ä)
+ê·¸ë¦¬ê³  í”„ë¼ì´ë¹— DCë¼ëŠ”ê²Œ ìžˆëŠ”ë°..
+í´ëž˜ìŠ¤DCì™€ ë¹„ìŠ·í•˜ë‚˜, ì—­ì‹œ CS_OWNDCìŠ¤íƒ€ì¼ í”Œëž˜ê·¸ë¥¼ ì¶”ê°€í•˜ë©´ ì‚¬ìš©í•œë‹µë‹ˆë‹¤.
 
-±×·¯´Ï±î.. GDI APIÀÌ°É·ç.. Canvas->Handle¸¦ Á÷Á¢ »ç¿ëÇÏ½Ã¸é µÉ²®´Ï´Ù.
+ì°¨ì´ì ì´ë¼ë©´.. 10ê°œë¥¼ ë§Œë“¤ë©´ 10ê°œì— ëª¨ë‘ ì „ìš©/ì˜êµ¬ DCê°€ ìƒê¸´ë‹¤ëŠ”ê²ë‹ˆë‹¤.
+ì¦‰.. ìœˆë„ìš°ë¥¼ 1ê°œë§Œ ë§Œë“¤êº¼ë©´ í´ëž˜ìŠ¤ë“  í”„ë¼ì´ë¹—ì´ë“  ìƒê´€ì´ ì—†ë‹¤ëŠ” ëœ» ìž…ë‹ˆë‹¤.
+
+(ì œìƒê°) 10ê°œì¼ë•Œ.. ëŒ€ë¹µDCê°€ 10ê°œ ìƒê¸´ë‹¤ëŠ” ëœ» ìž…ë‹ˆë‹¤ -_-;
+ê¸°ë³¸ê°’ì´ê³  ë­ê³  ì—†ì´ ì „ìš©DCì¸ê²ƒ ê°™ìŠµë‹ˆë‹¤.
+
+ì™œì“°ëŠ”ì§€ëŠ” ì•ˆë‚˜ì™€ìžˆê³  -_- ì†ë„ë•Œë¬¸ì— ê·¸ëŸ°ê²ƒì¼ê¹Œ ì¶”ì¸¡í•´ ë´…ë‹ˆë‹¤....
+
+
+ë„¤ë²ˆì§¸ëŠ” ìœˆë„ìš° DCì¸ë°.. ì²«ë²ˆì§¸ DCì™€ ë™ì¼í•˜ë‹¤ê³  ìƒê°í•˜ì‹œë©´ ì‰½ìŠµë‹ˆë‹¤.
+
+
+CreateParams() ì—ì„œ í”Œëž˜ê·¸ í™•ì¸ì„ í•´ë³´ë‹ˆ..
+ë¹Œë”ì˜ Canvas..ì¦‰.. DCëŠ”.. 2ë²ˆì§¸ 'í´ëž˜ìŠ¤ DC'ë¥¼ ì‚¬ìš©í•˜ëŠ”ê²ƒ ê°™ìŠµë‹ˆë‹¤.
+
+'ì…‹íŒ…'ì˜ ê°œë…ì€ ì ìš©ë˜ì§€ ì•ŠëŠ”ë°.. (WM_PAINTì—ì„œ ë¹Œë”ê°€ ë‚´ë¶€ì ìœ¼ë¡œ ë‹¤ì‹œ..)
+'ë¦´ë¦¬ì¦ˆ í•˜ì§€ ì•Šê³ ë„ ì–¸ì œë“ ì§€ ì‚¬ìš©ì´ ê°€ëŠ¥í•˜ë‹¤'ëŠ”ê²ƒì´ ëŒë¦½ë‹ˆë‹¤.
+
+ì–¸ì œ ì–´ë””ì„œë‚˜ TextOut(Canvas->Handle, ...)ë¥¼ í•˜ë©´ íš¨ê³¼ê°€ ë‚˜íƒ€ë‚©ë‹ˆë‹¤.
+ì´ê²ƒì€ í´ëž˜ìŠ¤DCë¥¼ ë‹¤ëŠ”ê²ë‹ˆë‹¤.
+
+
+WM_PAINTì—ì„œ Canvasë¥¼ ê±´ë“œë¦´ ì¼ì´ ìžˆë‹¤ë©´
+BeginPaint, GetDCë¥¼ ì‚¬ìš©í•˜ì§€ ë§ê³ .. ë°”ë¡œ Canvas->Handleë¥¼ ì‚¬ìš© í•˜ì‹­ì‹œì˜¤.
+
+WM_PAINTë‚´ë¶€ì—ì„œ Canvas->TextOut()ê³¼ ê°™ì€..
+í´ëž˜ìŠ¤ í•˜ë¶€ì˜ ë©”ì†Œë“œë¥¼ ì‚¬ìš©í•˜ë©´.. ë‚´ë¶€ì ìœ¼ë¡œ DCë¥¼ ê±´ë“œë ¤ì„œ..
+ë‹¤ì‹œ WM_PAINTë¥¼ ë°œìƒì‹œì¼œì„œ ë¬´í•œë£¨í”„ê°€ ëŒì§€ë„ ëª¨ë¦…ë‹ˆë‹¤.
+(ì „ í•œë²ˆ ê²ªì–´ë´¤ëŠ”ë° ì •í™•í•œ ìƒí™©ê¸°ì–µì´ ì•ˆë˜ë„¤ìš”)
+
+ê·¸ëŸ¬ë‹ˆê¹Œ.. GDI APIì´ê±¸ë£¨.. Canvas->Handleë¥¼ ì§ì ‘ ì‚¬ìš©í•˜ì‹œë©´ ë ê»ë‹ˆë‹¤.
 
 
 EOF
