--- a/코드 - 인터넷 파일 저장.md
+++ b/코드 - 인터넷 파일 저장.md
@@ -1,7 +1,7 @@
-# юнемЁщ╩Сюг фдюою╩ ╥ндц╥н юЗюЕго╢б дз╣Е
+О╩©# Л²╦М└╟К└╥Л┐│Л²≤ М▄▄Л²╪Л²└ К║°Л╩╛К║° Л═─Л·╔М∙≤К┼■ Л╫■К⌠°
 
 ```cpp
-// (WindowsInternet + VCL + MP_LIB ╩Г©К)
+// (WindowsInternet + VCL + MP_LIB Л┌╛Л ╘)
 //---------------------------------------------------------------------------
 #include <vcl.h>
 #include <wininet.h>
