Update 개발 - 요구분석과 설계 메모.md

--- a/개발 - 요구분석과 설계 메모.md
+++ b/개발 - 요구분석과 설계 메모.md
@@ -6,7 +6,7 @@
 
 두 가지를 필요에 따라 번갈아가며 섞어쓴다.
 
-1. Top-Down 접근법: 추상적 문제를 구체화 해 나가는 접근법
+1. Top-Down 접근법: 추상적 문제를 쪼개면서 구체화 해 나가는 접근법
 2. Bottom-Up 접근법: 밑바닥의 구체적인 기능들로 시작해서, 전체를 완성해 나가는 접근법
 
 
