Update 서버 - 테크닉.md

--- a/서버 - 테크닉.md
+++ b/서버 - 테크닉.md
@@ -66,4 +66,50 @@
 - 한 변수의 옵셋(예:아이템 인벤토리15개, 퀵아이템5개 합해서 20까지)값을
 분리해 주는 함수 필요
 
+## 서버 런칭후 최근 두드러 지는 문제점들
+```
+제대로된 서버를 짜본것이 이번이 처음이기 때문에
+두려운 점도 많았고 미숙한점도 많았는데..
+그중 문제 되는 점을 정리해 놓을까 합니다.
+
+1) SQL
+일단.. 가장 큰 문제가 '모르는 기술'을 대충 짜놓으면 안된다는것..
+SQL 같은 경우 OLEDB를 사용했기 때문에..(국내 서적이 개판임)
+'구현'에 중점을 두고.. 에러처리에 대한 확실한 검증이 없었죠..
+요즘 이 부분때문에 서버가 가장 많이 다운됩니다. (거의 이것때문에만-_-)
+주요 원인과 아쉬운점..
+- 연속으로 뭔가 요청할 경우 쓰레드가 블럭되는데.. 그 중간의 큐 처리가 까다로움
+- SQL금지문자가 있는데 이것을 사용할 경우 에러처리를 제대로 해 주어야 함
+- SQL서버가 꺼져도 게임서버가 돌아가게 되어야 함
+
+
+2) 데이터 조작 & 관리
+기획이 변경되면 코드만 바뀌는것이 아니라 데이터가 변경되어야 하는데..
+런타임 상 또는 서버가 안돌아 가는 상황에서 데이터를 초기화 시켜줘야 할때가 있습니다
+(데이터는 그대로 두고 스탯포인트를 재 환산 해준다든지.. LV를 일괄적으로 낮춘다든지)
+이런 경우에 일단 임시 방편으로.. 일괄 처리 유틸리티를 작성하게 되는데..
+원격으로 서버 업데이트시에 상당히 불편합니다.
+캐릭터 복구하기도 힘들고..
+'런타임'상에서 데이터를 바로바로 수정할수 있는 툴이 필요하죠..
+
+또 사용자 캐릭터 정보같은건 게임서버가 함께 갖는 경우가 있는데..
+파일이 깨져도 로딩되게 작성하거나, 자동으로 온전한 최근의 데이터를
+불러올수 있도록 백업 처리를 확실히 해줘야 합니다.
+
+그래야 '프로그래머 외이 다른사람'이 서버를 조작할수 있으니까요.
+(이거 상당히 중요 -_ㅜ)
+
+
+3) 로그
+로그.....상당히 중요합니다.
+최근 겪은일인데.
+프로그램 구조상으로 절대로 불가능한 일인데..
+버그라면서 전화를 해서는 캐릭터 스탯을 재분해 해줄수 있게 해달라고 떼쓴다는;;;;;
+사용자의 주요 행동 하나하나를 꼭 기록해 두어야 합니다.
+뻥쳐도 할말 없더군요 -_-;
+뭐 신고시에는 사기나 버그플레이도 잡아낼수 있으니 꼭 해두어야 합니다.
+
+다만 파일 기록을 하면 느려지니 반드시 로그서버는 C/S 구조로...
+```
+
 EOF
