Update 설정 - VS2017 솔루션 탐색기의 파일 왼쪽에 ▷ 버튼 기능 없애기.md

--- a/설정 - VS2017 솔루션 탐색기의 파일 왼쪽에 ▷ 버튼 기능 없애기.md
+++ b/설정 - VS2017 솔루션 탐색기의 파일 왼쪽에 ▷ 버튼 기능 없애기.md
@@ -12,3 +12,8 @@ Instructions for Visual Studio 2017:
 1. Select HKEY_USERS\vs2017, File → Unload Hive
 
 > Create new key가 아니라 DWORD Value인 것 같다.
+
+# Another Version
+
+https://visualstudioextensions.vlasovstudio.com/2013/11/04/hide-class-info-in-visual-studio-20122013-solution-explorer/
+https://vlasovstudio.com/visual-commander/commands.html#UseSolutionNavigatorGraphProvider
