Update 설정 - VS2017 솔루션 탐색기의 파일 왼쪽에 ▷ 버튼 기능 없애기.md

--- a/설정 - VS2017 솔루션 탐색기의 파일 왼쪽에 ▷ 버튼 기능 없애기.md
+++ b/설정 - VS2017 솔루션 탐색기의 파일 왼쪽에 ▷ 버튼 기능 없애기.md
@@ -1,5 +1,7 @@
 # 설정 - VS2017 솔루션 탐색기의 파일 왼쪽에 ▷ 버튼 기능 없애기
 
+뭔가 복잡한데, 그냥 레지스트리 찾아들어가서 키 만들어주면 된다.
+
 http://stackoverflow.com/a/42690759
 
 Instructions for Visual Studio 2017:
