Update 교양 - 해커가 되기 위한 고민의 파편들.md

--- a/교양 - 해커가 되기 위한 고민의 파편들.md
+++ b/교양 - 해커가 되기 위한 고민의 파편들.md
@@ -31,7 +31,7 @@
 1. Bell Labs, UC 버클리
 1. UNIX, C
 	1. 모방의 고리
-	1. C, B, LISP, SCHEME, Fortran, SpeedCoding, ..., 배선판
+	1. C, B, LISP, SCHEME, Fortran, SpeedCoding, ..., 배선판, 천공카드(자카르 방직기)
 		1. C언어는 UNIX를 위한 것
 	1. 폰노이만머신, 애니악, 튜링머신(수학모델), 
 	1. Ada
