Update 설정 - VS2017 솔루션 탐색기의 파일 왼쪽에 ▷ 버튼 기능 없애기.md

--- a/설정 - VS2017 솔루션 탐색기의 파일 왼쪽에 ▷ 버튼 기능 없애기.md
+++ b/설정 - VS2017 솔루션 탐색기의 파일 왼쪽에 ▷ 버튼 기능 없애기.md
@@ -1,6 +1,7 @@
 # 설정 - VS2017 솔루션 탐색기의 파일 왼쪽에 ▷ 버튼 기능 없애기
 
-뭔가 복잡한데, 그냥 레지스트리 찾아들어가서 키 만들어주면 된다.
+2017이상부터는 bin파일을 레지스트리에 올려서 편집한 후 저장한다.
+2015이하에서는 레지스트리 찾아들어가서 키 만들어주면 된다.
 
 http://stackoverflow.com/a/42690759
 
